test-cases/negative/test_024_for_without_collection.lay
# negative test: for each without collection
# expected: error should be thrown

for each item do
  print item


